@@ -1,3 +1,4 @@
+* Remove "Parties associated to Sales" menu entry
 * Permit only sale line of type line as stock move origin
 
 Version 7.2.0 - 2024-04-29
